@@ -174,6 +174,8 @@ Release 0.21.0 - Unreleased
    HBASE-1829  Make use of start/stop row in TableInputFormat
                (Lars George via Stack)
    HBASE-1867  Tool to regenerate an hbase table from the data files
+   HBASE-1904  Add tutorilal for installing HBase on Windows using Cygwin as
+               a test and development environment (Wim Van Leuven via Stack)
 
   OPTIMIZATIONS
    HBASE-410   [testing] Speed up the test suite
